# learn-react-source-code

./: .gitignore  DEV-PLAN.md  Design-Brief.md  Product-Spec-CHANGELOG.md  Product-Spec.md  README.md
.claude/feedback/: FEEDBACK-INDEX.md  design-canvas-layout-grouping.md  design-page-coverage-completeness.md
.github/workflows/: release.yml
designs/: app.pen
react-source-learning/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json
react-source-learning/src/: App.tsx  app.css  main.tsx
react-source-learning/src-tauri/: Cargo.toml  tauri.conf.json
react-source-learning/src-tauri/capabilities/: default.json
react-source-learning/src-tauri/src/: lib.rs  main.rs
react-source-learning/src-tauri/src/commands/: chat.rs
react-source-learning/src/components/: ChatHeader.tsx  ChatInput.tsx  ChatMessages.tsx  ChatPanel.tsx  ContentArea.tsx  CourseTree.tsx  GlobalSearch.tsx  ModuleSwitcher.tsx  ResizeHandle.tsx  ShellLayout.tsx  Sidebar.tsx  SidebarHeader.tsx  SidebarTabs.tsx  ThemeProvider.tsx  ToolbarLeft.tsx  ToolbarRight.tsx  TopToolbar.tsx
react-source-learning/src/hooks/: useChat.ts  useDragResize.ts  useKeyboardShortcut.ts  useLearningTimer.ts
react-source-learning/src/lib/: agent-config.ts  constants.ts  db-types.ts  db.ts  icons.ts  settings.ts
react-source-learning/src/stores/: useAgentStore.ts  useAppStore.ts  useChatPanelStore.ts  useConversationStore.ts  useCourseStore.ts  useProgressStore.ts  useQuizStore.ts  useSandboxStore.ts  useSettingsStore.ts  useSidebarStore.ts  useSourceStore.ts  useThemeStore.ts
(+61 files in other folders)
